--- a/tests/numeric_test.html
+++ b/tests/numeric_test.html
@@ -133,8 +133,8 @@ console.log('root=' + roots[i] + ', value=' + poly.valueAt(roots[i]));
 
   test('degree 9 polynomial equation (three real roots between 0 and 1)', function() {
     var poly = new numeric.Polynomial([984100, -458200, 8868537, -9420593, 5949408, -2282850, 522890, -67572, 4401, -109].reverse());
-    //var roots = poly.realRootsBetween(0, 1, 1e-12);
-    var roots = poly.realRoots(1e-12);
+    var roots = poly.realRootsBetween(0, 1);
+    //var roots = poly.realRoots(1e-12);
 console.log('9 degree poly. roots=' + JSON.stringify(roots));
     equals(roots.length, 3, '3 roots exist.');
     for (var i = 0, n = roots.length; i < n; ++i) {
@@ -142,6 +142,34 @@ console.log('root=' + roots[i] + ', value=' + poly.valueAt(roots[i]));
       ok(numeric.numberEquals(poly.valueAt(roots[i]), 0, 1e-12), 'equation value at root #' + i);
     }
   });
+
+  test('implicitization', function() {
+    function x(t) {
+      return new numeric.Polynomial([4, 18, -18, 2]).valueAt(t) /
+        new numeric.Polynomial([1, 3, -3]).valueAt(t);
+    }
+    function y(t) {
+      return new numeric.Polynomial([1, 33, -69, 39]).valueAt(t) /
+        new numeric.Polynomial([1, 3, -3]).valueAt(t);
+    }
+    function f(x, y) {
+      //-156195x^3+60426x^2y+2188998x^2-7056xy^2-562500xy-10175796x+224y^3+33168y^2+1322088y+15631624
+      var x2 = x * x, y2 = y * y, x3 = x2 * x, y3 = y2 * y,
+          x2y = x2 * y, xy2 = x * y2, xy = x * y;
+      return numeric.sum([-156195 * x3, 60426 * x2y, 2188998 * x2, -7056 * xy2, -562500 * xy, -10175796 * x, 224 * y3, 33168 * y2, 1322088 * y, 15631624]);
+    }
+
+    for (var i = 0, n = 10; i <= n; ++i) {
+      var t = i / n;
+      var xi = x(t);
+      var yi = y(t);
+      var fi = f(xi, yi);
+      console.log('imp i=' + i + ', fi=' + fi);
+      ok(numeric.numberEquals(fi, 0, 1e-7), 'value at t=' + t + ' must be zero');
+      //ok(numeric.numberEquals(fi, 0, 1e-12), 'value at t=' + t + ' must be zero');
+    }
+  });
+  
   test('polynomial resultant (degree 1)', function() {
     var f, g, r;
 
